
==========================================================================

Version 1.8.4 patchlevel 9                                 ??? ??, 201?

Major changes:
 * The PCRE library is now required to build Penn, instead of falling
   back to an old, buggy version formerly bundled with the MUSH. [SW]
   Daniko assisted greatly with Windows changes and documentation.

Minor changes:
 * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
   "event" restriction is set or cleared. Suggested by [SW]. [MG]
 * Expanded help on lock types and @powers. [MG]
 * @startups are now processed in db order (#0, #1, etc) on reboot instead
   of giving priority to player objects. [MG]
 * @startups (and local_startup() in local.c) are now triggered slightly
   later, ensuring that the db is fully loaded, and that the connected player
   list is loaded on @shutdown/reboot. Suggested by Padraic. [MG]
 * Switch names that are defined but not used by any commands are
   warned about on startup, and several unused ones have been removed
   from the master list. [SW]
 * Tweak utils/mkcmds.pl for the above change and to remove references
   to generating the obsolete patches.h. [SW]
 * Tweak the parameters of the skip list used to store memcheck counts
   to save some memory. [SW]
 * Bring the scheme scripts in utils up to date with current versions
   of chicken scheme (The implementation of the language they're
   written for.) [SW]
 * The test harness code strips trailing whitespace before attempting to match
   against expected results, making it easier to use bounded regexps. [SW]
 * @destination (for variable exits) is now a standard attribute, and has
   a helpfile. [MG]
 * Sound is now propagated through audible variable exits. Suggested by 
   Mercutio. [SW]
 * The internal QUEUE attribute is no longer used to track the number
   of action lists an object has queued; the objdata system is used
   instead.  [SW]